# nezha

./: AGENTS.md  CONTEXT.md  package.json
.scratch/windows-codex-wheel-scroll/: PRD.md
docs/adr/: 0001-prioritize-host-scrollback-for-windows-codex.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
src/: App.css  App.tsx  i18n.tsx  shortcuts.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/src/: analytics.rs  app_settings.rs  fs.rs  git.rs  lib.rs  pty.rs  session.rs  skills.rs  storage.rs
src-tauri/src/platform/: windows.rs
src/components/: FileExplorer.tsx  FileViewer.tsx  GitChanges.tsx  GitHistory.tsx  NewTaskView.tsx  ProjectPage.tsx  ProjectRail.tsx  RunningView.tsx  ShellTerminalPanel.tsx  SidebarFooterActions.tsx  StatusIcon.tsx  TaskPanel.tsx  TerminalView.tsx  TimelineView.tsx  Toast.tsx  WelcomePage.tsx  terminalCopyHelper.ts  terminalShared.ts  useTerminalPathDrop.ts
src/components/app-settings/: AgentConfigPanel.tsx  AgentPathSection.tsx  FontPanel.tsx  FontSelector.tsx  ShortcutsPanel.tsx  ThemePanel.tsx  types.ts
src/components/file-explorer/: ContextMenu.tsx  TreeItem.tsx  useExternalFileDrop.ts
src/components/git-view/: GitFileBrowser.tsx
src/styles/: common.ts  git-diff.ts  git-history.css  index.ts  layout.ts  panels.ts  rail-drag.ts  terminal.ts  themes.css  timeline.ts
src/test/: file-explorer-context-menu.test.tsx  font-defaults.test.ts  path-drop.test.ts  project-rail.test.tsx  send-shortcut.test.ts  terminal-wheel-scroll.test.ts
(+11 files in other folders)
